--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,6 +373,15 @@ html {
 body {
   background: url(../images/bg_img.png) no-repeat 50% 50%;
 }
+a,
+a:visited,
+a:link {
+  color: #2bc6ff;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
 #topbar {
   width: 100%;
   height: 15px;
@@ -443,7 +452,9 @@ body {
   display: inline-block;
   height: 63px;
   background: url(../images/button_right.png) no-repeat 100% 0;
-  padding-right: 10px;
+  padding: 0 10px 0 0;
+  margin: 0;
+  border: 0;
 }
 .container .button span {
   display: inline-block;
@@ -485,6 +496,43 @@ body {
   height: 100px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+}
+.container .users {
+  zoom: 1;
+  width: 240px;
+  margin: 0 auto;
+}
+.container .users:after {
+  display: block;
+  visibility: hidden;
+  height: 0;
+  clear: both;
+  content: ".";
+}
+.container .users .user {
+  float: left;
+  display: block;
+  width: 100px;
+  margin: 0 auto 20px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+.container .users .user img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+.container .users .vs {
+  float: left;
+  width: 19px;
+  height: 101px;
+  padding: 0 10px;
+  background: url(../images/vs.png) no-repeat 50% 0;
 }
 .container hr {
   border: 0;
@@ -574,4 +622,72 @@ body {
 .container .input.split_input .time input,
 .container .split_input.split_input .time input {
   width: 160px;
+}
+#accept .box {
+  padding: 25px 20px;
+}
+#accept .box h6 {
+  font-family: "Droid Sans", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #fff;
+  text-shadow: rgba(0, 0, 0, 0.4) 0 1px 1px;
+  text-align: center;
+  text-transform: uppercase;
+}
+#accept .box p {
+  font-family: "Belgrano", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 24px;
+  color: #fff;
+  text-shadow: rgba(0, 0, 0, 0.4) 0 1px 1px;
+  text-align: center;
+}
+#accept .timer {
+  zoom: 1;
+  padding: 0 0 30px;
+  width: 640px;
+  margin: 0 auto;
+}
+#accept .timer:after {
+  display: block;
+  visibility: hidden;
+  height: 0;
+  clear: both;
+  content: ".";
+}
+#accept .timer .block {
+  float: left;
+  width: 120px;
+  height: 120px;
+  margin: 0 20px;
+  background: url(../images/dark.png) repeat 0 0;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+#accept .timer .block p {
+  position: relative;
+  font-family: "Belgrano", Helvetica, Arial, sans-serif;
+  font-size: 48px;
+  font-weight: normal;
+  line-height: 100px;
+  color: #fff;
+  text-shadow: rgba(0, 0, 0, 0.4) 0 1px 1px;
+  text-align: center;
+}
+#accept .timer .block p span {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  width: 100%;
+  font-family: "Droid Sans", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 18px;
+  color: #a2a2a2;
+  text-shadow: rgba(0, 0, 0, 0.4) 0 1px 1px;
+  text-align: center;
+  text-transform: uppercase;
 }
