--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -14,6 +14,14 @@ body {
 	background: url(../images/bg_img.png) no-repeat 50% 50%;
 }
 
+a, a:visited, a:link {
+	color: #2bc6ff;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
+}
+
 #topbar {
 	width: 100%;
 	height: 15px;
@@ -86,7 +94,9 @@ body {
 		display: inline-block;
 		height: 63px;
 		background: url(../images/button_right.png) no-repeat 100% 0;
-		padding-right: 10px;
+		padding: 0 10px 0 0;
+		margin: 0;
+		border: 0;
 
 		span {
 			display: inline-block;
@@ -124,6 +134,36 @@ body {
 			width: 100px;
 			height: 100px;
 			.border-radius(5px);
+		}
+	}
+	
+	.users {
+		.clearfix;
+		width: 240px;
+		margin: 0 auto;
+		
+		.user {
+			float: left;
+			display: block;
+			width: 100px;
+			margin: 0 auto 20px;
+	
+			.box-shadow(rgba(0,0,0,0.3) 0 1px 3px);
+			.border-radius(5px);
+	
+			img {
+				display: block;
+				width: 100px;
+				height: 100px;
+				.border-radius(5px);
+			}
+		}
+		.vs {
+			float: left;
+			width: 19px;
+			height: 101px;
+			padding: 0 10px;
+			background: url(../images/vs.png) no-repeat 50% 0;
 		}
 	}
 	
@@ -199,3 +239,62 @@ body {
 		}
 	}
 }
+
+#accept {
+	.box {
+		padding: 25px 20px;
+
+		h6 {
+			#font > .sans-droid(700, 18px, 24px);
+			color: #fff;
+			text-shadow: rgba(0,0,0,0.4) 0 1px 1px;
+			text-align: center;
+			text-transform: uppercase;
+		}
+		p {
+			#font > .sans-belgrano(normal, 18px, 24px);
+			color: #fff;
+			text-shadow: rgba(0,0,0,0.4) 0 1px 1px;
+			text-align: center;
+		}
+	}
+	.timer {
+		.clearfix;
+		padding: 0 0 30px;
+		width: 640px;
+		margin: 0 auto;
+
+		.block {
+			float: left;
+			width: 120px;
+			height: 120px;
+			margin: 0 20px;
+
+			background: url(../images/dark.png) repeat 0 0;
+			.border-radius(5px);
+			
+			p {
+				position: relative;
+				#font > .sans-belgrano(normal, 48px, 100px);
+				color: #fff;
+				text-shadow: rgba(0,0,0,0.4) 0 1px 1px;
+				text-align: center;
+				
+				span {
+					position: absolute;
+					display: block;
+					bottom: 0;
+					width: 100%;
+
+					#font > .sans-droid(700, 18px, 18px);
+					color: #a2a2a2;
+					text-shadow: rgba(0,0,0,0.4) 0 1px 1px;
+					text-align: center;
+					text-transform: uppercase;
+				}
+			}
+		}
+	}
+}
+
+
