--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -11,7 +11,9 @@ html {
 }
 
 body {
-	background: url(../images/bg_img.png) no-repeat 50% 50%;
+	background: url(../images/bg_img.png) no-repeat 50% 0;
+	background-size: cover;
+	-webkot-background-size: cover;
 }
 
 a, a:visited, a:link {
@@ -287,7 +289,7 @@ a:hover {
 
 #accept {
 	.box {
-		padding: 25px 20px;
+		padding: 25px 57px;
 
 		h6 {
 			#font > .sans-droid(700, 18px, 24px);
@@ -306,14 +308,14 @@ a:hover {
 	.timer {
 		.clearfix;
 		padding: 0 0 30px;
-		width: 640px;
+		width: 560px;
 		margin: 0 auto;
 
 		.block {
 			float: left;
 			width: 120px;
 			height: 120px;
-			margin: 0 20px;
+			margin: 0 10px;
 
 			background: url(../images/dark.png) repeat 0 0;
 			.border-radius(5px);
