--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,5 +15,8 @@
 
 			<%- body %>
 		</div>
+		
+		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+		<script src="/assets/js/modal.js"></script>
 	</body>
 </html>
