--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -224,6 +224,22 @@ a:hover {
 					min-width: 150px;
 				}
 				
+				&.winner {
+					background: url(../images/button_green_right.png) no-repeat 100% 0;
+
+					span {
+						background: url(../images/button_green_left.png) no-repeat 0 0;
+					}
+				}
+
+				&.loser {
+					background: url(../images/button_red_right.png) no-repeat 100% 0;
+
+					span {
+						background: url(../images/button_red_left.png) no-repeat 0 0;
+					}
+				}
+
 				&.accepted {
 					background: url(../images/banner_purple_right.png) no-repeat 100% 0;
 
