--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -9,6 +9,7 @@
 			<% } else { %>
 				<p class="status"><span>Denied</span></p>
 			<% } %>
+			<p><span id="owner_total"><%= owner_total %></span></p>
 		<% } else { %>
 			<!-- <p class="status accepted"><span><img src="/assets/images/shield.png" />Brave Choice.</span></p> -->
 			<p class="status accepted"><span>Pick me!</span></p>
@@ -59,6 +60,7 @@
 			<% } else { %>
 				<p class="status"><span>Denied</span></p>
 			<% } %>
+			<p><span id="challenger_total"><%= challenger_total %></span></p>
 		<% } else { %>
 			<p class="status accepted"><span>Pick me!</span></p>
 
@@ -123,4 +125,25 @@ $(function () {
 var expired = function() {
 	window.location.reload();
 }
+</script>
+<script src="http://js.pusher.com/1.11/pusher.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+	// Enable pusher logging - don't include this in production
+	Pusher.log = function(message) {
+	  if (window.console && window.console.log) window.console.log(message);
+	};
+
+	// Flash fallback logging - don't include this in production
+	WEB_SOCKET_DEBUG = true;
+
+	var pusher = new Pusher('78011045678593d481df');
+	var channel = pusher.subscribe("<%= data.duel_id %>");
+	channel.bind('my_event', function(data) {
+	  if(data.is_owner) {
+	  	$("#owner_total").val(parseInt($("#owner_total").val()) + 1);
+	  }
+	  else {
+	  	$("#challenger_total").val(parseInt($("#owner_total").val()) + 1);
+	  }
+	});
 </script>
