--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -496,3 +496,11 @@ a:hover {
 	}
 }
 
+#challenger_total, #owner_total {
+	display: inline-block;
+	padding: 15px 0 0;
+	#font > .sans-belgrano(normal, 38px, 50px);
+	color: #fff;
+	text-shadow: rgba(0,0,0,0.4) 0 1px 1px;
+	text-align: center;
+}
